Closed Bug 741709 Opened 12 years ago Closed 12 years ago

nsAccessibleWrap::get_accParent() shouldn't use do_QueryObject to get a nsDocAccessible

Categories

(Core :: Disability Access APIs, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: tbsaunde, Assigned: capella)

References

Details

(Whiteboard: [good first bug][mentor=trev.saunders@gmail.com][lang=c++])

Attachments

(1 file)

instead of nsRefPtr<nsDocAccessible> doc = do_QueryObject(this) do nsDocAccessible* doc = AsDoc(); in accessible/src/msaa/nsAccessibleWrap.cpp
Ok, I started working on bug741707 then found this dependency, so I'll snag both.
Assignee: nobody → markcapella
Status: NEW → ASSIGNED
Attached patch Patch (v1)Splinter Review
Another quick patch ... wanted to get it done so I can do 741707 next...
Attachment #613470 - Flags: feedback?(trev.saunders)
Attachment #613470 - Flags: feedback?(trev.saunders) → review+
https://hg.mozilla.org/mozilla-central/rev/f483227d1cbe
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: