Bug 741709 - nsAccessibleWrap::get_accParent() shouldn't use do_QueryObject, r=tbsaunde